# xxLua

./: README.md
app/: build.gradle
app/src/main/assets/: greet.lua  lib_test.lua  test.lua  test3.lua
app/src/main/assets/sqlite3/: aggregate.lua  function.lua  order.lua
app/src/main/java/sk/kottman/androlua/: MainActivity.java
app/src/main/res/layout/: activity_main.xml  main.xml
app/src/main/res/raw/: luafile.lua
app/src/main/res/values/: strings.xml
lua5.3java/: CMakeLists.txt  build.gradle
lua5.3java/src/main/jni/android/: androidlib.c  androidlib.h  event_test.c
lua5.3java/src/main/jni/lua/: linit.c  lua.h
lua5.3java/src/main/jni/sqlite3/mySqlite3/: CMakeLists.txt
lua5.3java/src/main/jni/sqlite3/xxSqlite3/: CMakeLists.txt  lsqlite3.cxx
lua5.3java/src/main/jni/staticLua/xxLua/include/: ExtensionSupport.h  LuaAPIStub53.h  Macros.h  XModAPIStub.h  XModExtSupport.h  XModLua53APIStub.h  XModLuaAPIStub.h  XModLuaExtAPIStub.h  XModMacros.h  XModStruct.h
lua5.3java/src/main/jni/test/: CMakeLists.txt  library.c  library.h
lua5.3java/src/main/jni/unzip/myunzip/: CMakeLists.txt  ioapi.c  lua_unzip.cpp
lua5.3java/src/main/jni/unzip/xxunzip/: CMakeLists.txt  ioapi.h  lua_unzip.cpp
